--- a/question2/makefile
+++ b/question2/makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CFLAGS = -w -g -I.
-DEPS = record_struct.h read_rec.h display_rec.h
-OBJ = read_rec.c display_rec.c main.o 
+DEPS = record_struct.h read_rec.h display_rec.h sort_rec.h
+OBJ = read_rec.c display_rec.c sort_rec.c main.o 
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
