Update main.c and makefile

--- a/question2/makefile
+++ b/question2/makefile
@@ -1,12 +1,12 @@
 CC = gcc
 CFLAGS = -w -g -I.
 DEPS = record_struct.h read_rec.h display_rec.h sort_rec.h
-OBJ = read_rec.c display_rec.c sort_rec.c main.o 
+OBJ = read_rec.c display_rec.c sort_rec.c main.c
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-myrec: $(OBJ)
+myrec.out: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS)
 
 clean:
