--- a/question2/makefile
+++ b/question2/makefile
@@ -1,13 +1,21 @@
-CC = gcc
-CFLAGS = -w -g -I.
-DEPS = record_struct.h read_rec.h display_rec.h sort_rec.h
-OBJ = read_rec.c display_rec.c sort_rec.c main.c
+CFLAGS = -w -g -I. 
 
-%.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+default: myrec 
 
-myrec: $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS)
+myrec: read_rec.o display_rec.o sort_rec.o main.o 
+	gcc -o myrec read_rec.o display_rec.o sort_rec.o main.o $(CFLAGS) 
 
-clean:
-	$(RM) myrec *.o *~
+read_rec.o: read_rec.c 
+	gcc -c read_rec.c $(CFLAGS) 
+
+display_rec.o: display_rec.c 
+	gcc -c display_rec.c $(CFLAGS) 
+
+sort_rec.o: sort_rec.c 
+	gcc -c sort_rec.c $(CFLAGS) 
+
+main.o: main.c 
+	gcc -c main.c $(CFLAGS) 
+
+clean: 
+	rm -rf myrec *.o *~ 
